@@ -124,7 +124,7 @@
 
           <row>
             <entry><ulink
-            url="blacklisting_support.htm">Blacklisting</ulink></entry>
+            url="blacklisting_support.htm">Blacklisting/Whitelisting</ulink></entry>
 
             <entry><ulink
             url="two-interface.htm#SNAT">Masquerading</ulink></entry>
@@ -265,8 +265,8 @@
             <entry><ulink url="two-interface.htm#DNAT">Port
             Forwarding</ulink></entry>
 
-            <entry><ulink url="whitelisting_under_shorewall.htm">White List
-            Creation</ulink></entry>
+            <entry><ulink url="blacklisting_support.htm#whitelisting">White
+            List Creation</ulink></entry>
           </row>
 
           <row>
