@@ -5,7 +5,7 @@
   <!--$Id$-->
 
   <articleinfo>
-    <title>Shorewall Blacklisting Support</title>
+    <title>Shorewall Blacklisting/Whitelisting Support</title>
 
     <authorgroup>
       <author>
@@ -21,6 +21,8 @@
       <year>2002-2006</year>
 
       <year>2010</year>
+
+      <year>2011</year>
 
       <holder>Thomas M. Eastep</holder>
     </copyright>
@@ -66,10 +68,10 @@
     </orderedlist>
 
     <important>
-      <para><emphasis role="bold">Only the source address is checked against
-      the blacklists</emphasis>. Blacklists only stop blacklisted hosts from
-      connecting to you — they do not stop you or your users from connecting
-      to blacklisted hosts .</para>
+      <para><emphasis role="bold">By default, only the source address is
+      checked against the blacklists</emphasis>. Blacklists only stop
+      blacklisted hosts from connecting to you — they do not stop you or your
+      users from connecting to blacklisted hosts .</para>
 
       <variablelist>
         <varlistentry>
@@ -106,36 +108,31 @@
       <listitem>
         <para>You specify whether you want packets from blacklisted hosts
         dropped or rejected using the BLACKLIST_DISPOSITION setting in <ulink
-        url="manpages/shorewall.conf.html"><filename>/etc/shorewall/shorewall.conf</filename>.</ulink></para>
+        url="manpages/shorewall.conf.html"><filename>shorewall.conf</filename>(5).</ulink></para>
       </listitem>
 
       <listitem>
         <para>You specify whether you want packets from blacklisted hosts
         logged and at what syslog level using the BLACKLIST_LOGLEVEL setting
         in <ulink
-        url="manpages/shorewall.conf.html"><filename>/etc/shorewall/shorewall.conf</filename></ulink>.</para>
+        url="manpages/shorewall.conf.html"><filename>shorewall.conf</filename></ulink>(5).</para>
       </listitem>
 
       <listitem>
         <para>You list the IP addresses/subnets that you wish to blacklist in
         <ulink
-        url="manpages/shorewall-blacklist.html"><filename>/etc/shorewall/blacklist</filename></ulink>.
-        You may also specify PROTOCOL and Port numbers/Service names in the
-        blacklist file.</para>
+        url="manpages/shorewall-blacklist.html"><filename>shorewall-blacklist</filename></ulink>
+        (5). You may also specify PROTOCOL and Port numbers/Service names in
+        the blacklist file.</para>
       </listitem>
 
       <listitem>
         <para>You specify the interfaces whose incoming packets you want
         checked against the blacklist using the <quote>blacklist</quote>
         option in <ulink
-        url="manpages/shorewall-interfaces.html"><filename>/etc/shorewall/interfaces</filename></ulink>.</para>
-      </listitem>
-
-      <listitem>
-        <para>The black list is refreshed from
-        <filename>/etc/shorewall/blacklist</filename> by the <quote><ulink
-        url="starting_and_stopping_shorewall.htm"><command>shorewall
-        refresh</command></ulink></quote> command.</para>
+        url="manpages/shorewall-interfaces.html"><filename>shorewall-interfaces</filename></ulink>(5)
+        (<ulink url="manpages/shorewall-zones.html">shorewall-zones</ulink>(5)
+        in Shorewall 4.4.12 and later).</para>
       </listitem>
     </itemizedlist>
 
@@ -174,6 +171,19 @@ ipset -A Blacklist 206.124.146.177
 ipset -B Blacklist 206.124.146.177 -b SMTP</programlisting>
 
     <para>This will blacklist SMTP traffic from host 206.124.146.177.</para>
+  </section>
+
+  <section id="whitelisting">
+    <title>Static Whitelisting</title>
+
+    <para>Beginning with Shorewall 4.4.20, you can create
+    <firstterm>whitelist</firstterm> entries in the blacklist file.
+    Connections/packets matching a whitelist entry are not matched against the
+    entries in the blacklist file that follow. Whitelist entries are created
+    using the <emphasis role="bold">whitelist</emphasis> option (OPTIONS
+    column). See <ulink
+    url="manpages/shorewall-blacklist.html"><filename>shorewall-blacklist</filename></ulink>
+    (5).</para>
   </section>
 
   <section id="Dynamic">
