@@ -78,7 +78,7 @@
 
       <varlistentry>
         <term>OPTIONS (Optional - Added in 4.4.12) -
-        {-|{dst|src}[,...]}</term>
+        {-|{dst|src|whitelist}[,...]}</term>
 
         <listitem>
           <para>If specified, indicates whether traffic
@@ -122,6 +122,12 @@
               </listitem>
             </orderedlist>
           </note>
+
+          <para>In Shorewall 4.4.20, the <emphasis
+          role="bold">whitelist</emphasis> option was added. When <emphasis
+          role="bold">whitelist</emphasis> is specified, packets/connections
+          that match the entry are not matched against the remaining entries
+          in the file.</para>
         </listitem>
       </varlistentry>
     </variablelist>
