@@ -51,7 +51,12 @@ All bug fixes from 4.4.19.1 - 4.4.19.4.
 
 3)  An NFLOG 'ACTION' has been added to the accounting file to allow
     sending matching packets (or the leading part of them) to backend
-    accounting daemons via a netlink socket. 
+    accounting daemons via a netlink socket.
+
+4)  A 'whitelist' option has been added to the blacklist file. When
+    'whitelist' is specified, packets/connections matching the entry
+    are not matched against the entries which follow. No logging of
+    whitelisted packets/connections is performed.
 
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
