@@ -8,6 +8,8 @@ Changes in Shorewall 4.4.20 Beta 2
 
 4)  Implemented NFLOG accounting action.
 
+5)  Implement 'whitelist' option.
+
 Changes in Shorewall 4.4.20 Beta 1
 
 1)  Apply Togan's patch for installation flexibility.
